--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-
+title: Hemalatha Venugopal
+logo: /Users/Arun/Downloads/4E0F05C7-9627-475E-BF28-5487428084FE.jpg
+#description: Technical writer/UX Designer/UX Writer
